--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>🐶 🔍</title>
+    <title>Dog Searching</title>
     <link rel="stylesheet" href="./main.css" />
     <script defer src="./script.js"></script>
   </head>
   <body>
-    <header>
-      <h1>🐶 🔍</h1>
+    <header class="header">
+      <h1>Dog Searching</h1>
+      <p>You have 1 hint and 2 clicks !</p>
+      <p id="hint"></p>
     </header>
     <main>
       <div class="container">
@@ -5973,6 +5975,11 @@
           </svg>
         </div>
       </div>
+      <div id='again' class="hide">
+        <p id='result'>result</p>
+        <button id='again-btn' class="btn">Play Again !</button>
+      </div>
     </main>
+    
   </body>
 </html>
