--- a/index.html
+++ b/index.html
@@ -5977,7 +5977,7 @@
       </div>
       <div id='again' class="hide">
         <p id='result'>result</p>
-        <button id='again-btn' class="btn">Play Again !</button>
+        <button id='again-btn' class="btn">Search Again !</button>
       </div>
     </main>
     
