--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dog Searching</title>
+    <link href="https://fonts.googleapis.com/css2?family=Sansita+Swashed&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./main.css" />
     <script defer src="./script.js"></script>
   </head>
@@ -5976,7 +5977,7 @@
         </div>
       </div>
       <div id='again' class="hide">
-        <p id='result'>result</p>
+        <p id='result-message'>result</p>
         <button id='again-btn' class="btn">Search Again !</button>
       </div>
     </main>
