--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <header class="header">
       <h1>Dog Searching</h1>
-      <p>You have 1 hint and 2 clicks !</p>
+      <p>You have 1 hint and 2 clicks</p>
       <p id="hint"></p>
     </header>
     <main>
@@ -5978,7 +5978,7 @@
       </div>
       <div id='again' class="hide">
         <p id='result-message'>result</p>
-        <button id='again-btn' class="btn">Search Again !</button>
+        <button id='again-btn' class="btn">Search Again</button>
       </div>
     </main>
     
