--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Dog Searching</title>
     <link href="https://fonts.googleapis.com/css2?family=Sansita+Swashed&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./main.css" />
+    <script defer src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js"></script>
+    
     <script defer src="./script.js"></script>
   </head>
   <body>
