--- a/index.html
+++ b/index.html
@@ -2227,7 +2227,7 @@
               fill="#338000"
               id="path46"
             />
-            <g transform="matrix(.1613 0 0 .15752 8.278 14.76)" fill="#d4aa00">
+            <g transform="matrix(.1613 0 0 .15752 8.278 12.56)" fill="#d4aa00">
               <g id="bottom-fish">
                 <path
                   d="M.796 37.935c1.516-4.96 8.742-6.727 13.761-5.78-3.32 1.565-3.02 4.134-2.539 6.754-3.996-.785-6.835-1.007-11.253.399"
@@ -2356,22 +2356,22 @@
             />
             <g
               id="bottom-splashes"
-              transform="translate(-1.828 -5.768)"
+              transform="translate(1.828 -5.768)"
               fill="#e6e6e6"
             >
               <path
                 d="M9.685 28.067c.203.164.271-.051.225-.207-.028.067-.346.062-.225.207z"
-                id="path897-7-5"
+                id="splash1"
                 stroke-width=".026"
               />
               <path
                 d="M8.954 27.397c-.134.656.438.501.739.187-.502.447-.717-.43-.74-.187z"
-                id="path897"
+                id="splash2"
                 stroke-width=".065"
               />
               <path
                 d="M9.746 27.017c-.529.411.007.666.44.622-.672.014-.266-.792-.44-.622z"
-                id="path897-7"
+                id="splash3"
                 stroke-width=".065"
               />
             </g>
