On branch master

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <header class="header">
       <h1>Dog Searching</h1>
-      <p>You have 1 hint and 2 clicks</p>
+      <p>You have 5 clicks</p>
       <p id="hint"></p>
     </header>
     <main>
@@ -124,7 +124,7 @@
             </defs>
             <path
               d="M60.497 78.997l18.588.002.258-42.682zm-60.205.235c.066-.183 31.914.209 32.063.134C63.264 57.676 52.576 26.856 79.03.01L.363.002z"
-              fill="#5aa02c"
+              fill="#2ca05a"
               id="path2"
               stroke-width="2.987"
             />
@@ -800,7 +800,7 @@
             />
             <path
               d="M 15.072,0.034 C 7.759796,-0.089 1.3269082,6.6614858 -9.1767925e-5,12.112486 0.064,11.859119 0.056,22.748 -0.065,26.491 L 26.393,26.324 C 26.383,25.933 26.351,1.312 26.326,0.051 22.46,-0.023 18.814,0.228 15.072,0.034 Z"
-              fill="#4fad2c"
+              fill="#2ca05a"
               id="path12"
               stroke-width=".988"
             />
@@ -1515,19 +1515,19 @@
                 <path
                   d="M-19.624 9.27l-5.11 8.59-1.582 9.948c3.854.831 7.662.975 11.395 0-.538-3.38-1.48-6.94-2.14-10.228-.303-1.514-.073-2.978.15-4.513l5.064 10.671c1.015-.022 2.134.233 2.808-.696-1.6-4.76-5.89-12.594-7.164-13.607z"
                   id="path1232"
-                  fill="#fff"
+                  fill="#000"
                   stroke-width=".265"
                 />
                 <path
                   d="M-24.849 17.341l7.717-.34c-.02.01.275.492.312 1.02.018.271-8.185.204-8.185.204z"
                   id="path1238"
-                  fill="#a40"
+                  fill="#fff"
                   stroke-width=".213"
                 />
                 <path
                   d="M-23.874 4.996c.48-.918.994-1.944 2.26-1.085 1.219-.894 2.294.265 2.578.86-.252-3.482-5.017-3.49-4.838.225z"
                   id="path1240"
-                  fill="#4d4d4d"
+                  fill="#333"
                   stroke-width=".265"
                 />
                 <path
@@ -1555,7 +1555,7 @@
           >
             <path
               d="M.045 26.547L-.001.062C4.725.02 25.593.04 26.404.072l.154 26.384z"
-              fill="#71c837"
+              fill="#2ca05a"
               id="path2"
             />
             <path
@@ -2002,13 +2002,12 @@
             <path
               d="M26.55 26.57l-11.83-.167c2.833-5.132-4.657-13.223 11.813-14.53-.25 3.04.012 11.163.017 14.696z"
               fill="#ac9d93"
-              stroke="#ac9d93"
               stroke-width=".088"
               id="path2"
             />
             <path
               d="M26.481 11.872L26.497.046C24.721.016 21.905 0 20.431-.023c-3.374 5.066-4.509 9.478-4.116 14.856l10.217-2.96"
-              fill="#71c837"
+              fill="#2ca05a"
               id="path4"
             />
             <path
@@ -2018,7 +2017,7 @@
             />
             <path
               d="M.042.028l-.02 26.414 2.225.011c6.115-7.37 5.837-17.65 8.7-26.414C7.34.087 3.552-.111.042.028z"
-              fill="#5aa02c"
+              fill="#2ca05a"
               id="path8"
             />
             <path
@@ -2416,7 +2415,7 @@
             </defs>
             <path
               d="M.013.035l26.403.016.02 15.095c-6.628 6.668-17.622-2.085-26.407-3.46z"
-              fill="#5aa028"
+              fill="#2ca05a"
               id="path2"
             />
             <path
@@ -3145,7 +3144,7 @@
             <path
               d="M99.688.02c.168 17.392.308 46.814.246 51.4L.22 57.801.045.112z"
               id="path5655"
-              fill="#71ac37"
+              fill="#2ca05a"
               stroke-width=".332"
             />
             <path
@@ -3933,7 +3932,7 @@
             />
             <path
               d="M2.125.003L.031.01C.025 1.427-.015 2.844.043 4.26.94 2.956 1.878 1.605 2.126.004z"
-              fill="#5aa02c"
+              fill="#2ca05a"
               id="path6"
             />
             <path
